<resources>
    <string name="app_name">DataBases</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_loggin">Marvel Login</string>

    <string name="loggin_correo">Correo electrónico</string>
    <string name="loggin_password">Password</string>
    <string name="loggin_ingresar">Ingresar</string>
    <string name="persona_dialogAdd">Agregar</string>
    <string name="persona_dialogCancelar">Cancelar</string>
    <string name="persona_correo">Correo electrónico</string>
    <string name="persona_nombres">Nombres</string>
    <string name="persona_apellidos">Apellidos</string>
    <string name="persona_password">Password</string>

    <string-array name="personaSexos">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
</resources>
